# fp-tut

./: .gitignore  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  queries.sql  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_20_1345-c4cfd101d674_create_products_table.py  2024_01_20_1358-bfa499ba0f43_create_users_table.py  2024_01_20_1403-b498a5c517b3_create_posts_table.py  2024_01_20_1433-324fb03fbe58_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: mixins.py  post.py  profile.py  user.py
help/: README.md
users/: crud.py  schemas.py  views.py
